--- a/site.html
+++ b/site.html
@@ -6,6 +6,17 @@
 		height: 20px;
 		width: 20px;
 		background: blue;
+		text-align: center;
+		font-size: 11;
+		position: absolute;
+	}
+
+	.box {
+		width:400px;
+		padding:20px;
+		height: 400px;
+		border:7px solid gray;
+		margin:0px;
 	}
 	</style>
 	<script src="http://code.jquery.com/jquery-latest.js">
@@ -14,21 +25,27 @@
 <body>
 
 	<script>
-	var numCircles = 5, 
-		numChanges = 2, 
-		changeInterval = 2000,
+	var numCircles = 30, 
+		numChanges = 15, 
+		changeInterval = 500,
+		timeStep = 0,
 		rand,
 		changes = [];
 	function makeRed () {
 		do{
-			var rand = Math.floor(Math.random() * 6).toString()
+			rand = Math.floor(Math.random() * numCircles).toString()
 		} while (changes.lastIndexOf(rand) != -1);
+		timeStep++;
 		changes.push(rand);
-		$('#circle' + rand).css("background", "red");
+		console.log(rand);
+		$('#circle' + rand).css("background", "red").html('t=' + timeStep);
 	};
 	function start() {
+		var circle;
 		for (i=0; i<numCircles; i++){
-			$("body").append("<div class='circle' id=circle" + i.toString() + "></div>");
+			circle = "circle" + i.toString();
+			$("body").append("<div class='circle' id=" + circle + "></div>");
+			$("#"+circle).css({top: Math.floor(Math.random()*400 + 20), left: Math.floor(Math.random()*400) + 20});
 		};
 	};
 	function clear() {
@@ -38,6 +55,8 @@
 	var r = setInterval(makeRed, changeInterval);
 	setTimeout(clear, (numChanges+.5)*changeInterval);
 	</script>
+
+	<div class='box'></div>
 
 </body>
 </html>
