--- a/site.html
+++ b/site.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<style type="text/css">
+
 	.circle {
 		border-radius : 50%;
 		height: 20px;
@@ -9,8 +10,11 @@
 		text-align: center;
 		font-size: 11;
 		position: absolute;
+		-webkit-transition: background 1s ease;
+    	-moz-transition: background 1s ease;
+    	-o-transition: background 1s ease;
+    	transition: background 1s ease;
 	}
-
 	.box {
 		width:400px;
 		padding:20px;
