--- a/site.html
+++ b/site.html
@@ -2,80 +2,94 @@
 <head>
 	<style type="text/css">
 
-	.circle {
-		border-radius : 50%;
-		height: 20px;
-		width: 20px;
-		background: blue;
-		text-align: center;
-		font-size: 11;
+	.house {
 		position: absolute;
-		-webkit-transition: background 1s ease;
-    	-moz-transition: background 1s ease;
-    	-o-transition: background 1s ease;
-    	transition: background 1s ease;
 	}
 
 	.box {
 		width:400px;
-		padding:20px;
 		height: 400px;
-		border:7px solid gray;
-		margin:0px;
+		border:4px solid gray;
 	}
 
 	.draggable { 
     	width: 40px; 
     	height: 40px; 
-    	padding: 0.5em; 
     	float: left; 
-    	margin: 0 10px 10px 0; 
     	background-color: yellow;
 	}​
+
+	#toolbar {
+        padding: 10px 4px;
+    }
+
 	</style>
 
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="http://code.jquery.com/ui/1.8.24/jquery-ui.min.js"></script>
-
-</head>
-<body>
-
-	<!--<div class='draggable' id='dragme'><img src=vaccine.jpg>vaccine</div>-->
-	<div class='draggable' id='dragme'>vaccine</div>
-	<div class='box'></div>
-
 	<script>
-	var numCircles = 30, 
+	var numHouses = 30, 
 		numChanges = 15, 
 		changeInterval = 500,
 		timeStep = 0,
 		boxSize = 400,
 		changes = [],
-		houses = [];
+		houses = [],
+	 	vacAreas = 0,
+		flags = 0;
 
+	//button setup
+	$(function() {
+        $( "#flag" ).button({
+            text: false,
+            icons: {
+                primary: 'ui-icon-flag'
+            }
+        });
+        $( "#vaccinate" ).button({
+            text: false,
+            icons: {
+                primary: "ui-icon-alert"
+            }
+        }).click(function () {
+        	var id = 'vaccine' + vacAreas.toString();
+        	$("<div class='draggable' id=" + id + ">vaccine</div>").appendTo("#area");
+        	vacAreas++;
+        	$( "#" + id )
+	        	.draggable({containment : '#area'})
+	        	.resizable({containment : '#area'});
+        });
+    });
+
+	//main house data structure
 	var House = function (houseNum) {
 		this.houseNum = houseNum;
-		this.htmlId = 'circle' + houseNum;
-		this.x = Math.floor(Math.random()*boxSize + 20);
-		this.y = Math.floor(Math.random()*boxSize + 20);
+		this.htmlId = 'house' + houseNum;
+		this.x = Math.floor(Math.random()*(boxSize - 22) + 10);
+		this.y = Math.floor(Math.random()*(boxSize - 22) + 10);
 		this.infected = false;
 
 		//add the house to the html
 		this.display = function () {
-			$("body").append("<div class='circle' id=" + this.htmlId + "></div>");
+			$("body").append("<div class='house' id=" + this.htmlId + "><img id=" + this.htmlId + "img src=icons/53-house.png></div>");
 			$("#"+this.htmlId).css({top: this.y, left: this.x});
 			houses.push(this);
 		};
 
 		this.infect = function(timeStep) {
 			if (!this.infected) {
-				$('#' + this.htmlId).css("background", "red").html('t=' + timeStep);
+				//$('#' + this.htmlId + "img").attr("src", "icons/53-house-infected.png");
+				$('#' + this.htmlId + "img").fadeOut(function() { 
+				  $(this).load(function() { $(this).fadeIn(); }); 
+				  $(this).attr("src", "icons/53-house-infected.png"); 
+				});
 				changes.push(this.houseNum);
 				this.infected = true;
 			}
 		};
 
-		//is this house within some distance of another house?
+		//how many pixels between this house and some other one?
 		this.distanceTo = function(otherHouse) {
 			xDiff = Math.abs(this.x - otherHouse.x);
 			yDiff = Math.abs(this.y - otherHouse.y);
@@ -88,7 +102,7 @@
 	function infectRandom () {
 		var rand;
 		do{
-			rand = Math.floor(Math.random() * numCircles)
+			rand = Math.floor(Math.random() * numHouses)
 		} while (changes.lastIndexOf(rand) != -1);
 		house = houses[rand];
 		house.infect(timeStep);
@@ -98,7 +112,7 @@
 	//make houses, display them
 	function generateHouses() {
 		var house;
-		for (i=0; i<numCircles; i++){
+		for (i=0; i<numHouses; i++){
 			house = new House(i);
 			house.display();
 		};
@@ -108,12 +122,25 @@
 		clearInterval(r);
 	};
 
-	//where we actually start doing stuff
+	
+    </script>
+</head>
+<body>
+
+	<div class='box' id='area'></div>
+
+
+	<span id="toolbar" class="ui-widget-header ui-corner-all">
+    <button id="flag">flag a contaminated area</button>
+    <button id="vaccinate">vaccinate an area</button>
+	</span>
+
+	<script>
+
 	generateHouses();
 
 	var r = setInterval(infectRandom, changeInterval);
 	setTimeout(clear, (numChanges+.5)*changeInterval);
-	$('#dragme').draggable();
 
 	</script>
 
