--- a/site.html
+++ b/site.html
@@ -10,13 +10,27 @@
 		width:400px;
 		height: 400px;
 		border:4px solid gray;
+		display: inline-block;
+		float:left;
+	}
+
+	.helperbox {
+		width:200px;
+		height: 408px;
+		background: #dddddd;
+		border: 2px black;
+		display: inline-block;
+		float:left;
 	}
 
 	.draggable { 
-    	width: 40px; 
-    	height: 40px; 
+    	width: 55px; 
+    	height: 55px; 
     	float: left; 
+    	opacity: 0.85;
+    	font-size: 11;
     	background-color: yellow;
+    	border:1px solid black;
 	}​
 
 	#toolbar {
@@ -39,7 +53,20 @@
 	 	vacAreas = 0,
 		numFlags = 0;
 
-	//button setup
+	//unbind all button click events after flag is placed
+	var unbindAll = function() {
+		$("#area").unbind('click');
+		var id;
+		for (i = 0; i < numHouses; i++) {
+			id = "#house" + i;
+			$(id).unbind('click');
+		} for (i = 0; i < vacAreas; i++) {
+			id = "#vaccine" + i;
+			$(id).unbind('click');
+		}
+	};
+
+	//basic button setup
 	$(function() {
         $( "#flag" ).button({
             text: false,
@@ -47,16 +74,56 @@
                 primary: 'ui-icon-flag'
             }
         }).click(function() {
-        	$("#flag").buttonset();
-        	$("#area").click(function (e) {
-        		var flagId = "flag" + numFlags.toString();
-        		$("#area").append("<div id=" + flagId +"><img src='icons/59-flag.png'</div>" )
-        		$("#" + flagId).css({position:'absolute', top: e.pageY - 26, left: e.pageX});
-        		numFlags++;
-        		$("#area").unbind('click');
-        		$("#flag").removeAttr("checked");
-        		$("#flag").button("refresh");
-        	})
+        	if ($("#flag").attr("checked")) {
+	        	$("#flag").buttonset();
+	        	//make the box flaggable
+	        	$("#area").click(function (e) {
+	        		var flagId = "flag" + numFlags.toString();
+	        		$("#area").append("<div id=" + flagId +"><img src='icons/59-flag.png'</div>" )
+	        		$("#" + flagId).css({position:'absolute', top: e.pageY - 26, left: e.pageX});
+	        		numFlags++;
+	        		unbindAll();
+	        		$("#flag").removeAttr("checked");
+	        		$("#flag").button("refresh");
+	        		$("#help").text('Help Box');
+	        	})
+	        	var houseId;
+	        	var flagId
+	        	//make sure all the houses can be clicked on to flag
+	        	for (i = 0; i < numHouses; i++) {
+	        		houseId = "house" + i;
+	        		$("#" + houseId).click(function (e) {
+		        		flagId = "flag" + numFlags.toString();
+		        		$("#area").append("<div id=" + flagId +"><img src='icons/59-flag.png'</div>" )
+		        		$("#" + flagId).css({position:'absolute', top: e.pageY - 26, left: e.pageX});
+		        		numFlags++;
+		        		unbindAll();
+		        		$("#flag").removeAttr("checked");
+		        		$("#flag").button("refresh");
+		        		$("#help").text('Help Box');
+		        	})
+	        	}
+	        	//make the vaccine boxes flaggable
+	        	var vaccineId;
+	        	for (i = 0; i < vacAreas; i++) {
+	        		vaccineId = "vaccine" + i;
+	        		$("#" + vaccineId).click(function (e) {
+		        		flagId = "flag" + numFlags.toString();
+		        		$("#area").append("<div id=" + flagId +"><img src='icons/59-flag.png'</div>" )
+		        		$("#" + flagId).css({position:'absolute', top: e.pageY - 26, left: e.pageX});
+		        		numFlags++;
+		        		unbindAll();
+		        		$("#flag").removeAttr("checked");
+		        		$("#flag").button("refresh");
+		        		$("#help").text('Help Box');
+		        	})
+	        	}
+	        } else {
+	        	unbindAll();
+	        	$("#flag").removeAttr("checked");
+	        	$("#flag").button("refresh");
+	        }
+	        $("#help").text("Click within the box to place a flag on a area to mark it as contaminated. Click on the flag icon again to cancel.");
         });
         $( "#vaccinate" ).button({
             text: false,
@@ -66,10 +133,12 @@
         }).click(function () {
         	var id = 'vaccine' + vacAreas.toString();
         	$("<div class='draggable' id=" + id + ">vaccine</div>").appendTo("#area");
-        	vacAreas++;
         	$( "#" + id )
 	        	.draggable({containment : '#area'})
-	        	.resizable({containment : '#area'});
+	        	.resizable({containment : '#area'})
+	        	.css({"background": 'rgb('+ (255 - (vacAreas*50)) +',255,0)'});
+        	vacAreas++;
+        	$("#help").text("You've created a vaccination area! Drag and resize the box over the area you wish to vaccinate.");
         });
     });
 
@@ -90,7 +159,6 @@
 
 		this.infect = function(timeStep) {
 			if (!this.infected) {
-				//$('#' + this.htmlId + "img").attr("src", "icons/53-house-infected.png");
 				$('#' + this.htmlId + "img").fadeOut(function() { 
 				  $(this).load(function() { $(this).fadeIn(); }); 
 				  $(this).attr("src", "icons/53-house-infected.png"); 
@@ -138,13 +206,17 @@
 </head>
 <body>
 
+	<div style="display:inline-block">
 	<div class='box' id='area'></div>
+	<div class='helperbox' id='help' style="text-align:center">Help Box</div>
+	</div>
 
-
+	<div>
 	<span id="toolbar" class="ui-widget-header ui-corner-all">
     <input type="checkbox" id="flag" /> <label for="flag"> Flag a contaminated area </label>
     <button id="vaccinate">Vaccinate an area</button>
 	</span>
+	</div>
 
 	<script>
 
