small bug fix in help box dialogue

--- a/site.html
+++ b/site.html
@@ -122,6 +122,7 @@
 	        	unbindAll();
 	        	$("#flag").removeAttr("checked");
 	        	$("#flag").button("refresh");
+	        	$("#help").text('Help Box');
 	        }
 	        $("#help").text("Click within the box to place a flag on a area to mark it as contaminated. Click on the flag icon again to cancel.");
         });
