added poisson stuff

--- a/site.html
+++ b/site.html
@@ -61,7 +61,7 @@
     <input type="checkbox" id="flag"/> <label for="flag">Flag a contaminated area</label>
     <input type="checkbox" id="delete"/> <label for="delete">Delete a flag or vaccine</label>
 	</span>
-    <input type="checkbox" id="display_all"/> <lab for="display_all">Show all houses</label>
+    <input type="checkbox" id="display_all"/> <label for="display_all">Show all houses</label>
 	</div>
 
 </body>
