--- a/site.html
+++ b/site.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<style type="text/css">
 
@@ -45,7 +46,11 @@
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="http://code.jquery.com/ui/1.8.24/jquery-ui.min.js"></script>
 	<script src="web-exp-backend.js"></script>
-
+	<script>
+		var next = function() {
+			window.location = "response.html";
+		}
+	</script>
 </head>
 <body>
 
@@ -62,7 +67,11 @@
     <input type="checkbox" id="delete"/> <label for="delete">Delete a flag or vaccine</label>
 	</span>
     <input type="checkbox" id="display_all"/> <label for="display_all">Show all houses</label>
+	</br></br></br></br></br></br>
+	<button type="button" onclick="next()" style="margin-left:200px">I'm Done!</button>
 	</div>
+
+
 
 </body>
 </html>
