added benchmark timing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 		var next = function () {
 			if (document.getElementById("agree").checked) {
-				window.location = "site.html";
+				window.location = "instructions.html";
 			} else {
 				document.getElementById("reminder").innerHTML = "Please check 'I agree' before continuing."
 			}
