--- a/instructions.html
+++ b/instructions.html
@@ -31,12 +31,16 @@
 
 		The whole map is the layout of the city, and each house represents where each family lives in the city. Initially 
 		all the houses are grey because as far as we know they are not sick.
-
-		(example picture of one of the maps)
-
 		If a house turns red, that means someone in that family became sick.
+
+		<div align="center">
+			<p>Image from a sample simulation</p>
+			<img id="example_sim" src="icons/Screenshot.png"></br></br>
+		</div>
+
 	</br></br></br></br>
 	<div align="center">
+		<p>Click the button to see the infection animation</p>
 		<img id="example_house" src="icons/53-house.png">
 	</br></br> 
 		<button id="demo_button" type="button" onclick="showExample()">Infect!</button>
