--- a/response.html
+++ b/response.html
@@ -7,7 +7,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script>
     $(function() {
-        $( "#slider" ).slider({min:0, max:100, width:200, slide: function( event, ui ) {
+        $( "#slider" ).slider({min:0, max:100, width:200, value:50, slide: function( event, ui ) {
                 $( "#slider" ).val( ui.value );
     			},
                 change: function(event, ui) {
@@ -16,9 +16,10 @@
         			$("#sbutton").css("display", "block");
             }, stop: function(event, ui) {
             	document.getElementById("confidence").innerHTML = "Confidence = " + this.value
-            	$("#genetic").css("font-size", (30 - ((22/100) * this.value)));
-				$("#contagious").css("font-size", (8 + ((22/100) * this.value)));
-            } });
+    //         	$("#genetic").css("font-size", (30 - ((22/100) * this.value)));
+				// $("#contagious").css("font-size", (8 + ((22/100) * this.value)));
+            } }).val(null);
+
     });
 
     function submit () {
@@ -38,9 +39,13 @@
 <body>
 	<div align="center">
 		<p>How confident are you that the disease you were just shown is contagious?</p>
-		<p><span id="genetic">Genetic</span> &nbsp&nbsp&nbsp&nbsp
-			&nbsp&nbsp&nbsp<span id="contagious"> Contagious</span>
-		<div id="slider" style="width:200px"></div></br></br>
+		<table cellspacing="20" cellpadding="20">
+			<tr>
+				<td style="text-align:right"><span id="genetic">Genetic</span></td>
+				<td><div id="slider" style="width:200px"></div></td>
+				<td style="text-align:left"><span id="contagious"> Contagious</span></td></br></br>
+			</tr>
+		</table>
 		<p id="confidence" style="display:none">Confidence = 0</p>
 		<button type="button" id="sbutton" style="display:none" onclick="submit()">Submit</button>
 </html>
