added redo button, messing around with instructions

--- a/instructions.html
+++ b/instructions.html
@@ -22,6 +22,7 @@
 	</script>
 </head>
 <body>
+	<div style="padding:15px; align:center; margin-right:auto; margin-left:auto; width:75%; border:1px solid gray">
 	<p>
 		Imagine you are a public health official trying to identify new contagious diseases. 
 		Some diseases are contagious and so can be transmitted from person to person, whereas others are genetic, 
@@ -34,17 +35,20 @@
 		If a house turns red, that means someone in that family became sick.
 
 		<div align="center">
+			<p>Click the button to see the infection animation</p>
+			<img id="example_house" src="icons/53-house.png">
+		</br></br> 
+			<button id="demo_button" type="button" onclick="showExample()">Infect!</button>
+		</br></br></br></br>
+		</div>
+	</div>
+
+	</br></br></br></br>
+	
+		<div align="center">
 			<p>Image from a sample simulation</p>
 			<img id="example_sim" src="icons/Screenshot.png"></br></br>
 		</div>
-
-	</br></br></br></br>
-	<div align="center">
-		<p>Click the button to see the infection animation</p>
-		<img id="example_house" src="icons/53-house.png">
-	</br></br> 
-		<button id="demo_button" type="button" onclick="showExample()">Infect!</button>
-	</br></br></br></br>
 	</div>
 
 		Your job is to watch each video and decide whether the disease in question is contagious or genetic. 
