--- a/response.html
+++ b/response.html
@@ -43,9 +43,9 @@
 			<tr>
 				<td style="text-align:right"><span id="genetic">Genetic</span></td>
 				<td><div id="slider" style="width:200px"></div></td>
-				<td style="text-align:left"><span id="contagious"> Contagious</span></td></br></br>
+				<td style="text-align:left"><span id="contagious"> Contagious</span></td>
 			</tr>
-		</table>
+		</table></br></br>
 		<p id="confidence" style="display:none">Confidence = 0</p>
 		<button type="button" id="sbutton" style="display:none" onclick="submit()">Submit</button>
 </html>
