--- a/site.html
+++ b/site.html
@@ -74,11 +74,12 @@
 	<div>
 	<span id="toolbar" class="ui-widget-header ui-corner-all" style="margin: 150px">
     <button id="start">Begin simulation</button>
+    <button id="redo">See the simulation again></button>
     <button id="vaccinate">Vaccinate an area</button>
     <input type="checkbox" id="flag"/> <label for="flag">Flag a contaminated area</label>
     <input type="checkbox" id="delete"/> <label for="delete">Delete a flag or vaccine</label>
 	</span>
-    <input type="checkbox" id="display_all"/> <label for="display_all">Show all houses</label>
+    <input type="checkbox" id="display_all" checked="true"/> <label for="display_all">Show all houses</label>
 	</br></br></br></br></br></br>
 	<button type="button" onclick="next()" style="margin-left:200px">I'm Done!</button>
 	</div>
