breaking up instructions

--- a/instructions.html
+++ b/instructions.html
@@ -2,23 +2,13 @@
 <html>
 <head>
 	<h1 style="text-align:center">Instructions</h1>
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
-	<script src="http://code.jquery.com/ui/1.8.24/jquery-ui.min.js"></script>
 	<script type="text/javascript">
 		var enabled = true;
 		function next() {
-			window.location = "site.html";
+			window.location = "instructions2.html";
 		}
 
-		function showExample() {
-			if (enabled) {
-				$("#example_house").fadeOut(function() {
-					$(this).attr("src", "icons/53-house-infected.png"); 
-					$(this).load(function() { $(this).fadeIn(); }); 
-				});
-				enabled = false;
-			}
-		}
+		
 	</script>
 </head>
 <body>
@@ -29,32 +19,10 @@
 		and will not be transmitted person to person.
 
 		You will see a series of videos that represent the timecourse of various diseases in one city.
-
-		The whole map is the layout of the city, and each house represents where each family lives in the city. Initially 
-		all the houses are grey because as far as we know they are not sick.
-		If a house turns red, that means someone in that family became sick.
-
-		<div align="center">
-			<p>Click the button to see the infection animation</p>
-			<img id="example_house" src="icons/53-house.png">
-		</br></br> 
-			<button id="demo_button" type="button" onclick="showExample()">Infect!</button>
-		</br></br></br></br>
-		</div>
+	</p>
+		
 	</div>
 
-	</br></br></br></br>
-	
-		<div align="center">
-			<p>Image from a sample simulation</p>
-			<img id="example_sim" src="icons/Screenshot.png"></br></br>
-		</div>
-	</div>
-
-		Your job is to watch each video and decide whether the disease in question is contagious or genetic. 
-		You will rate how confident you are on a scale from 0 to 100, where 0 means that you are confident the disease 
-		is not contagious, it is genetic and 100 means that you are confident that the disease is contagious, not genetic.</p>
-	</br></br> </br></br>
 	<div align="right">
 		<button id="continue" onclick="next()">Continue</button>
 	</div>
