centered instruction pictures and examples

--- a/instructions3.html
+++ b/instructions3.html
@@ -33,12 +33,12 @@
 		<p>If a house in the simulation turns red, that means someone in that family became sick. Click the
 			infect button to see the infection animation.
 		</p>
-
-		<div align="center" class="box">
-			<img id="example_house" src="icons/53-house.png" style="padding-right:90px; padding-top:110px">
+		<div align="center">
+			<div align="center" class="box">
+				<img id="example_house" src="icons/53-house.png" style="padding-right:90px; padding-top:110px">
+			</div>
+				<button id="demo_button" type="button" onclick="showExample()">Infect!</button>
 		</div>
-			<button id="demo_button" type="button" style="margin-left:170px" onclick="showExample()">Infect!</button>
-
 	</div>
 
 	<div align="right">
