--- a/instructions2.html
+++ b/instructions2.html
@@ -14,8 +14,9 @@
 	<div style="padding:15px; align:center; margin-right:auto; margin-left:auto; width:75%; border:1px solid gray">	
 		<p>	The whole map is the layout of the city, and each house represents where each family lives in the city. 
 		Initially all the houses are grey because as far as we know they are not sick.</p></br></br>
-
-		<img src="icons/time-0.png"></br></br>
+		<div align="center">
+			<img src="icons/time-0.png"></br></br>
+		</div>
 		
 	</div>
 
